5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/224/users/4382/executions/1596_2049.log
== SUBMITION (2019-03-26 19:14:34) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
dividendo=int(input(dividendo))
divisor=int(input(divisor))
quociente=dividendo//divisor
resto=dividendo%divisor
print(dividendo)
print(divisor)
print(quociente)
print(resto)
-- EXECUTION TIME:
0.114977
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1596/2049/main.py", line 4, in <module>
    dividendo=int(input(dividendo))
NameError: name 'dividendo' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 19:14:38) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
dividendo=int(input(dividendo))
divisor=int(input(divisor))
quociente=dividendo//divisor
resto=dividendo%divisor
print(dividendo)
print(divisor)
print(quociente)
print(resto)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    dividendo=int(input(dividendo))
NameError: name 'dividendo' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 19:15:39) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
dividendo=int(input("digite dividendo"))
divisor=int(input("digite divisor"))
quociente=dividendo//divisor
resto=dividendo%divisor
print(dividendo)
print(divisor)
print(quociente)
print(resto)
-- EXECUTION TIME:
0.138193
-- TEST CASE 1:
---- input:
8
5
---- correct output:
8
5
1
3
---- user output:
8
5
1
3
-- TEST CASE 2:
---- input:
14
2
---- correct output:
14
2
7
0
---- user output:
14
2
7
0
-- TEST CASE 3:
---- input:
347
2
---- correct output:
347
2
173
1
---- user output:
347
2
173
1
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
